# Lorr

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODESTYLE.md  LICENSE  README.md  Style.md  workspace.code-workspace
GLCraft/: CMakeLists.txt
GLCraft/res/shaders/: main.f.glsl  main.v.glsl
GLCraft/src/: main.cc  pch.hh
GLCraft/src/App/: App.cc  App.hh
GLCraft/src/Graphics/: Camera.cc  Camera.hh  Shader.cc  Shader.hh  Window.cc  Window.hh
GLCraft/src/Graphics/Renderer/: RendererAPI.cc  RendererAPI.hh  VertexBatcher.cc  VertexBatcher.hh
Game/: CMakeLists.txt  main.cc
Game/GameApp/: GameApp.cc  GameApp.hh
Game/Resources/: .resmeta-structure  rc_main.lua
Game/Resources/Shaders/: batch.p.hlsl  batch.v.hlsl  font.p.hlsl  fullscreen.p.hlsl  fullscreen.v.hlsl  imgui.p.hlsl  imgui.v.hlsl  model.p.hlsl  model.v.hlsl  terrain.p.hlsl  terrain.v.hlsl  terrain_packed.p.hlsl  terrain_packed.v.hlsl
Game/Scenes/: MainScene.cc  Scenes.hh
Game/Terrain/: Block.hh  Terrain.hh  TerrainMeshBuilder.cc  TerrainMeshBuilder.hh
Game/res/shaders/: mainp.hlsl  mainv.hlsl
Game/src/: main.cc
Game/src/GameApp/: GameApp.cc  GameApp.hh
Lorr/: CMakeLists.txt
Lorr/Editor/: CMakeLists.txt  main.cc
Lorr/Editor/App/: EditorApp.cc  EditorApp.hh
Lorr/Editor/Layers/: Layer.hh
Lorr/Editor/Layers/Main/: EntityWindow.cc  EntityWindow.hh  MainLayer.cc  MainLayer.hh  PropertiesWindow.cc  PropertiesWindow.hh  ResourceWindow.cc  ResourceWindow.hh
Lorr/Editor/res/shaders/: mainp.hlsl  mainv.hlsl
Lorr/Editor/src/: main.cc
Lorr/Editor/src/Layers/: Layer.hh
Lorr/Engine/: CMakeLists.txt
Lorr/Engine/App/: BaseApp.cc  BaseApp.hh  Common.cc  Common.hh  Engine.cc  Engine.hh  pch.hh
Lorr/Engine/Asset/: AssetFile.hh
Lorr/Engine/Audio/: Audio.cc  Audio.hh  AudioChannel.cc  AudioChannel.hh  AudioSystem.cc  AudioSystem.hh  Helper.hh
Lorr/Engine/Audio/Loader/: AudioLoader.cc  AudioLoader.hh  MP3Loader.cc  MP3Loader.hh  OggLoader.cc  OggLoader.hh  WavLoader.cc  WavLoader.hh
Lorr/Engine/Core/: FileSystem.hh
Lorr/Engine/Core/BiNut/: BiNut.hh
Lorr/Engine/Core/Window/: BaseWindow.cc  BaseWindow.hh  IWindow.hh  PlatformWindow.hh
Lorr/Engine/Debug/: ImGuiHandler.cc  ImGuiHandler.hh
Lorr/Engine/ECS/: Entity.cc  Entity.hh  EntityUtils.cc  ISystem.hh  Scene.cc  Scene.hh
Lorr/Engine/ECS/Components/: BaseComponent.hh  CameraComponent.hh  PhysicsComponent.hh  RenderableComponent.hh  TextComponent.hh  TransformComponent.hh
Lorr/Engine/ECS/Systems/: CameraControllerSystem.cc  CameraControllerSystem.hh  PhysicsSystem.cc  PhysicsSystem.hh  RendererSystem.cc  RendererSystem.hh  TransformSystem.cc  TransformSystem.hh
Lorr/Engine/GUI/: GUIHandler.cc  GUIHandler.hh
Lorr/Engine/Graphics/: Camera2D.cc  Camera2D.hh  Camera3D.cc  Camera3D.hh  Font.cc  Font.def  Font.hh  Renderer.cc  Renderer.hh  Renderer2D.cc  Renderer2D.hh  Shader.cc  Shader.hh  Texture2D.cc  Texture2D.hh  Types.hh  VertexBatcher.cc  VertexBatcher.hh  pch.hh
Lorr/Engine/Graphics/Common/: BaseRenderBuffer.cc  BaseRenderBuffer.hh  BaseRenderer.cc  BaseRenderer.hh  BaseShader.cc  BaseShader.hh  BaseTexture.cc  BaseTexture.hh  IRenderBuffer.cc  IRenderBuffer.hh  IRenderer.cc  IRenderer.hh  IRendererStateManager.hh  IShader.cc  IShader.hh  ITexture.cc  ITexture.hh  InputLayout.cc  InputLayout.hh  Type.hh
Lorr/Engine/Graphics/D3D/: D3DProfile.cc  D3DProfile.hh  D3DType.hh
Lorr/Engine/Graphics/D3D11/: D3D11RenderBuffer.cc  D3D11RenderBuffer.hh  D3D11RenderTargetManager.cc  D3D11RenderTargetManager.hh  D3D11Renderer.cc  D3D11Renderer.hh  D3D11RendererStateManager.cc  D3D11RendererStateManager.hh  D3D11Shader.cc  D3D11Shader.hh  D3D11SwapChain.cc  D3D11SwapChain.hh  D3D11Texture.cc  D3D11Texture.hh
Lorr/Engine/Graphics/D3D12/: D3D12CommandListManager.hh  D3D12CommandQueueMan.hh  D3D12RenderCommand.cc  D3D12RenderCommand.hh  D3D12RenderTargetManager.cc  D3D12RenderTargetManager.hh  D3D12Renderer.cc  D3D12Renderer.hh  D3D12SwapChain.cc  D3D12SwapChain.hh
Lorr/Engine/Graphics/PostProcess/: IPostProcess.cc  IPostProcess.hh
Lorr/Engine/Graphics/Renderer/: Renderer2D.cc  Renderer2D.hh  VertexBatcher.cc  VertexBatcher.hh
Lorr/Engine/Job/: Queue.cc  Queue.hh  Worker.cc  Worker.hh
Lorr/Engine/Managers/: InputManager.cc  InputManager.hh  ResourceManager.cc  ResourceManager.hh  ShaderManager.cc  ShaderManager.hh
Lorr/Engine/Model/: Mesh.cc  Mesh.hh  Model.cc  Model.hh
Lorr/Engine/Model/Loader/: ModelLoader.cc  ModelLoader.hh  OBJLoader.cc  OBJLoader.hh
Lorr/Engine/Model/RT/: EmbreeAPI.cc  EmbreeAPI.hh  RT.def
Lorr/Engine/Resource/: IResource.hh  ResourceFile.hh  ResourceMeta.cc  ResourceMeta.hh
Lorr/Engine/Scripting/: Lua.cc  Lua.hh
Lorr/Engine/Stream/: BufferStream.hh  FileStream.hh
Lorr/Engine/Systems/: InputSystem.cc  InputSystem.hh
Lorr/Engine/Systems/Helpers/: InputVars.hh
Lorr/Engine/Terrain/: Chunk.cc  Chunk.hh  ChunkManager.cc  ChunkManager.hh  Terrain.cc  Terrain.hh
Lorr/Engine/Terrain/Chunk/: BaseChunkManager.cc  BaseChunkManager.hh  Chunk.hh  DetailedChunkManager.cc  DetailedChunkManager.hh
Lorr/Engine/Utils/: ArgParser.hh  BitFlags.hh  BufferStream.cc  BufferStream.hh  Counter.hh  FPSLimiter.hh  FileStream.cc  FileStream.hh  Format.hh  Hash.hh  Identifier.hh  Logger.hh  Math.hh  Random.hh  Timer.hh  Utils.cc
Lorr/Engine/src/: Common.hh  Engine.cc  Engine.hh  pch.hh
Lorr/Game/: CMakeLists.txt
Lorr/Game/src/: main.cc
Lorr/ResourceCompiler/: CMakeLists.txt  main.cc
Lorr/ResourceCompiler/src/: main.cc
Lorr/Resources/: info.lua  licenses.txt
Lorr/Resources/Shader/: batch.p.hlsl  batchp.lr  batchv.lr  downsample.p.hlsl  downsamplep.lr  font.p.hlsl  font.v.hlsl  fontp.lr  fullscreen.p.hlsl  fullscreen.v.hlsl  fullscreenp.lr  fullscreenv.lr  imgui.p.hlsl  imgui.v.hlsl  imguip.lr  imguiv.lr  lensDownsample.c.hlsl  lensDownsample.lr  model.p.hlsl  model.v.hlsl  modelp.lr  modelv.lr  scat.p.hlsl  scat.v.hlsl  scatp.lr  scatv.lr  test.c.hlsl  testc.lr  tonemapping.p.hlsl  tonemappingp.lr
Lorr/res/shaders/: main.f.glsl  main.v.glsl
Lorr/src/: main.cc  pch.hh
(+132 files in other folders)
